--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
     </style>
   <script src="./💗 Love you 💗_files/monitors.3.6.36.cn.js.下载" async="" crossorigin="anonymous"></script><script src="./💗 Love you 💗_files/sentry.3.6.36.cn.js.下载" async="" crossorigin="anonymous"></script></head>
   <body>
+      <a href="https://mp.weixin.qq.com/s/9V4UORySTqo_AP51jcGNaw" class="hide_buttom"
+  style="position: fixed;top: 10%;right: 10px;width: 35px;height: 35px;z-index: 999;background: #696969;border-radius: 50%;padding: 1.0px;text-align: center;color: #ddd;text-decoration: none;   clear: both; line-height: 35px; 	margin:auto;   font-size: 13px;">制作</a>
+  <a href="https://mp.weixin.qq.com/s/J6A4zHsVYL8HEzQEefGQJA" class="hide_buttom"
+  style="position: fixed;top: 4%;right: 10px;width: 35px;height: 35px;z-index: 999;background: #696969;border-radius: 50%;padding: 1.0px;text-align: center;color: #ddd;text-decoration: none;   clear: both; line-height: 35px; 	margin:auto;   font-size: 13px;   ">更多</a>
     <canvas id="pinkboard" width="1707" height="868"></canvas>
 
     <canvas id="canvas" width="1707" height="868"></canvas>
