--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         // ctx.font="20px";
         ctx.fillStyle = colors[i % 18];
         ctx.fillText(
-          "给你的爱心",
+          "💗亲爱的 生日快乐 永远热爱生活 💗",
           this.x - this.width * 0.5,
           this.y - this.height * 0.5,
           this.width,
